--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -11,6 +11,7 @@
 #  todate      :datetime
 #  multiday    :string
 #  description :string
+#  created_by  :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
